--- a/index.html
+++ b/index.html
@@ -365,25 +365,25 @@
                 <div class="menu__container bd-grid">
                     <div class="menu__content">
                         <img src="assets/img/plate1.png" alt="" class="menu__img">
-                        <h3 class="menu__name">Barbecue salad</h3>
-                        <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$22.00</span>
+                        <h3 class="menu__name">Calzones</h3>
+                        <span class="menu__detail">De carne</span>
+                        <span class="menu__preci">C$22.00</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/plate2.png" alt="" class="menu__img">
-                        <h3 class="menu__name">Salad with fish</h3>
-                        <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$12.00</span>
+                        <h3 class="menu__name">Ensalada</h3>
+                        <span class="menu__detail">Muy rica</span>
+                        <span class="menu__preci">C$12.00</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
                     
                     <div class="menu__content">
                         <img src="assets/img/plate3.png" alt="" class="menu__img">
-                        <h3 class="menu__name">Spinach salad</h3>
-                        <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$9.50</span>
+                        <h3 class="menu__name">Pasta</h3>
+                        <span class="menu__detail">pasta italiana</span>
+                        <span class="menu__preci">C$9.50</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
                 </div>
